--- a/charts/apisix/values.yaml
+++ b/charts/apisix/values.yaml
@@ -417,8 +417,9 @@ gateway:
   externalIPs: []
   # -- Apache APISIX service settings for http
   additionalContainerPorts: []
-  # - ip: 127.0.0.3           # Specific IP, If not set, the default value is `0.0.0.0`.
-  #   port: 9445
+  #   port: 9091
+  #   protocol: TCP
+  #  name: prometheus
   # -- Apache APISIX service settings for http
   http:
     enabled: true
